# banter

./: .env.example  .gitignore  Cargo.toml  check_output2.txt  package-lock.json
backend/: .gitignore  check3.txt  check_full.txt  check_output.txt
backend/migrations/: 001_initial.sql
backend/src/: db.rs
backend/src/auth/: mod.rs  supabase.rs
backend/src/handlers/: channels.rs  servers.rs  voice.rs
backend/src/models/: mod.rs  profile.rs  server.rs
backend/src/ws/: connection.rs  events.rs  mod.rs
frontend/: tailwind.config.ts
frontend/src/: index.css
frontend/src/components/chat/: ChatArea.tsx
frontend/src/components/layout/: DMSidebar.tsx  ServerDock.tsx  ServerSidebar.tsx
frontend/src/components/views/: DiscoveryView.tsx  VoiceCallView.tsx
frontend/src/pages/: Index.tsx
src/: config.rs  error.rs  main.rs
src/auth/: handlers.rs  mod.rs  supabase.rs
src/handlers/: dms.rs  mod.rs
src/models/: channel.rs  dm.rs  message.rs
src/ws/: mod.rs  router.rs
